fixed display issues with email form field on firefox. input text now visible.

--- a/_sass/beachstrap-styles.scss
+++ b/_sass/beachstrap-styles.scss
@@ -86,7 +86,7 @@ form{
 		border-radius: 0;
 		border:1px solid #ccc;
 		@include transition;
-		padding:20px;
+		height:40px;
 		box-sizing: border-box;
 		&:focus{
 		background-color:#eee;
